k8s/myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      component: myapp-label
  template:
    metadata:
      labels:
        component: myapp-label
    spec:
      containers:
        - name: myapp-name
          image: sucheit/myapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: myapp-label
  ports:
    - port: 8080
      targetPort: 8080
